typescript/checker/tests/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration7.ts.stderr
error: TS1038
 --> $DIR/tests/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration7.ts:2:3
  |
2 |   declare class C {
  |   ^^^^^^^

